adding Estate Modal

--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Svelte + TS + Tailwind + Vite App</title>
     <script>
-			const mode = window.localStorage.getItem('themePreference');
-			if (window &&
-				(mode === 'dark' ||
-				(mode == null && window.matchMedia('(prefers-color-scheme: dark)').matches))) {
-					document.documentElement.classList.add('dark');
-			}
 		</script>
   </head>
-  <body class="text-gray-800 bg-white dark:text-white dark:bg-gray-800">
+  <body class="text-gray-800 bg-stone-200">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
